deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        app: merchant-service
    name: merchant-service
spec:
    replicas: 1
    selector:
        matchLabels:
            app: merchant-service
    template:
        metadata:
            labels:
                app: merchant-service
        spec:
            containers:
                - image: rishi154/merchant:0.0.1
                  imagePullPolicy: IfNotPresent
                  name: merchant-service
---

apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        app: product-service
    name: product-service
spec:
    replicas: 1
    selector:
        matchLabels:
            app: product-service
    template:
        metadata:
            labels:
                app: product-service
        spec:
            containers:
                - image: rishi154/product:0.0.1
                  imagePullPolicy: IfNotPresent
                  name: product-service
---

apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        app: customer-service
    name: customer-service
spec:
    replicas: 1
    selector:
        matchLabels:
            app: customer-service
    template:
        metadata:
            labels:
                app: customer-service
        spec:
            containers:
                - image: rishi154/customer:0.0.1
                  imagePullPolicy: IfNotPresent
                  name: customer-service
---

apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        app: transaction-service
    name: transaction-service
spec:
    replicas: 1
    selector:
        matchLabels:
            app: transaction-service
    template:
        metadata:
            labels:
                app: transaction-service
        spec:
            containers:
                - image: rishi154/transaction:0.0.1
                  imagePullPolicy: IfNotPresent
                  name: transaction-service
---

apiVersion: v1
kind: Service
metadata:
    name: merchant-service
spec:
    type: ClusterIP
    selector:
        app: merchant-service
    ports:
        - name: http-merchant
          port: 30009
          targetPort: 30009
          #nodePort: 30009

---

apiVersion: v1
kind: Service
metadata:
    name: product-service
spec:
    type: ClusterIP
    selector:
        app: product-service
    ports:
        - name: http-product
          port: 30010
          targetPort: 30010
          #nodePort: 30010

---

apiVersion: v1
kind: Service
metadata:
    name: customer-service
spec:
    type: ClusterIP
    selector:
        app: customer-service
    ports:
        - name: http-customer
          port: 30007
          targetPort: 30007
          #nodePort: 30007

---

apiVersion: v1
kind: Service
metadata:
    name: transaction-service
spec:
    type: ClusterIP
    selector:
        app: transaction-service
    ports:
        - name: http-transaction
          port: 30011
          targetPort: 30011
          #nodePort: 30011
