istio-rules.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: nvrs-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nvrs-service
spec:
  hosts:
    - "*"
  gateways:
    - nvrs-gateway
  http:
    - match:
        - uri:
            exact: /product
        - uri:
            prefix: /product
      route:
        - destination:
            host: product-service
            port:
              number: 30010
    - match:
        - uri:
            exact: /customer
        - uri:
            prefix: /customer
      route:
        - destination:
            host: customer-service
            port:
              number: 30007
    - match:
        - uri:
            exact: /transaction
        - uri:
            prefix: /transaction
      route:
        - destination:
            host: transaction-service
            port:
              number: 30011
    - match:
        - uri:
            exact: /merchant
        - uri:
            prefix: /merchant
      route:
        - destination:
            host: merchant-service
            port:
              number: 30009
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: transaction-service-destination
spec:
  host: transaction-service
  subsets:
    - name: v1
      labels:
        version: v1
---

apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: merchant-service-destination
spec:
  host: merchnt-service
  subsets:
    - name: v1
      labels:
        version: v1

---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: customer-service-destination
spec:
  host: customer-service
  subsets:
    - name: v1
      labels:
        version: v1

---

apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: product-service-destination
spec:
  host: product-service
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2

---

apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: product-service-route
spec:
  hosts:
    - product-service
  http:
    - route:
        - destination:
            host: product-service
            subset: v2
          weight: 80
        - destination:
            host: product-service
            subset: v1
          weight: 20
      retries:
        attempts: 3
        retryOn: gateway-error,connect-failure,refused-stream
      timeout: 0.5s

---

apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: customer-service-route
spec:
  hosts:
    - customer-service
  gateways:
    - nvrs-gateway
  http:
    - route:
        - destination:
            host: customer-service
            subset: v1
---

apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: transaction-service-route
spec:
  hosts:
    - transaction-service
  gateways:
    - nvrs-gateway
  http:
    - route:
        - destination:
            host: transaction-service
            subset: v1
